--- a/tugas/Tugas Html/tugas2.html
+++ b/tugas/Tugas Html/tugas2.html
@@ -22,7 +22,7 @@ Saat ini saya sedang belajar <b>HTML</b> dasar untuk membuat website sendiri yg 
 
 <ul>
     <li>Baca kitab</li>
-    <li><abbr title="Senam Thifan">Sentai</abbr></li>
+    <li><abbr title="Senam Thifan">Sentai💀</abbr></li>
     <li>Jogging</li>
 
 </ul>
@@ -36,7 +36,7 @@ Saat ini saya sedang belajar <b>HTML</b> dasar untuk membuat website sendiri yg 
 <p><b>Whatsapp:+62 851-8782-8553</b></p>
 <p><b>Telagram:@faiz_cooll</b></p>
 <p><b>Instagram:</b><a href="https://www.instagram.com/muslim.i.d?igsh=ZXJqYmNnOXNnd3dk">Ig ku😁</a></p>
-<p><b>Email:faiz64muharram"gmail.com</b></p><hr>
+<p><b>Email:faiz64muharram@gmail.com</b></p><hr>
 
 <a href="http://127.0.0.1:5500/tugas1.html"><b>⬅️Kembali ke halaman utama</b></a>
 
