--- a/tugas/Tugas Html/tugas2.html
+++ b/tugas/Tugas Html/tugas2.html
@@ -12,7 +12,7 @@
 
 <h3><b>Biodata singkat</b></h3>
 
-<img src="photo_2025-08-24_13-17-15.jpg"width=220px alt=""><br>
+<img src="ganteng.jpg"width=220px alt=""><br>
 
 <b>Assalammualaikum!,</b> halo sobat html perkenalkan saya adalah siswa/santri <b>HSI Boarding School Purworejo.</b>
 Saya sangat suka belajar teknologi dan ingin menjadi <i>pribadi yg bermanfaat bagi orang lain.</i> 
