--- a/tugas/Tugas Html/tugas2.html
+++ b/tugas/Tugas Html/tugas2.html
@@ -12,7 +12,7 @@
 
 <h3><b>Biodata singkat</b></h3>
 
-<img src="ganteng.jpg"width=220px alt=""><br>
+<img src="image/ganteng.jpg"width=220px alt=""><br>
 
 <b>Assalammualaikum!,</b> halo sobat html perkenalkan saya adalah siswa/santri <b>HSI Boarding School Purworejo.</b>
 Saya sangat suka belajar teknologi dan ingin menjadi <i>pribadi yg bermanfaat bagi orang lain.</i> 
@@ -38,8 +38,7 @@ Saat ini saya sedang belajar <b>HTML</b> dasar untuk membuat website sendiri yg 
 <p><b>Instagram:</b><a href="https://www.instagram.com/muslim.i.d?igsh=ZXJqYmNnOXNnd3dk">Ig ku😁</a></p>
 <p><b>Email:faiz64muharram@gmail.com</b></p><hr>
 
-<a href="http://127.0.0.1:5500/tugas1.html"><b>⬅️Kembali ke halaman utama</b></a>
-
+<a href="tugas1.html"><b>⬅️Kembali ke halaman utama</b></a>
 
 
 
