--- a/tugas/Tugas Html/tugas1.html
+++ b/tugas/Tugas Html/tugas1.html
@@ -14,7 +14,7 @@
         <h2>Avatar Panutan</h2>
          <h4>Berikut ini adalah <cite>avatar yang menggambarkan minatku💀</cite>:</h4>
 
-         <img src="anime-style-portrait-traditional-japanese-samurai-character (1).jpg"width=280px alt="">
+         <img src="image/anime-style-portrait-traditional-japanese-samurai-character (1).jpg"width=280px alt="">
 
          
 
@@ -23,7 +23,7 @@
              Bagi saya,samurai mengajarkan arti <cite>kesetiaan, keberanian, serta hidup dengan prinsip yang jelas.</cite>
               Saya juga kagum pada Bushidō, kode etik samurai, yang menekankan rasa tanggung jawab dan keteguhan hati."</p>
 
-              <a href="http://127.0.0.1:5500/tugas2.html"><b>➡️Kehalaman Biodata ku😊</b></a>
+              <a href="tugas2.html"><b>➡️Kehalaman Biodata ku😊</b></a>
 
 
 
