--- a/tugas/tugas 3/biodata.html
+++ b/tugas/tugas 3/biodata.html
@@ -8,16 +8,30 @@
 
 </head>
 <body>
-    <h1 class="judul">Biodata Santri💫</h1>
+    <div class="judul">
+      <h1>Biodata Santri💫</h1>
+      <h2 class="bawah-judul">Asrama Ibnu Taimiiyah</h2>
+      <br />
+      <hr />
+      <br /><br />
 
-    <h2 class="bawah-judul">Kelas 10 A - Asrama Ibnu Taimiyyah</h2>
+      <div class="nav">
+        <a href="index.html">Beranda</a> <a href="biodata.html">Biodata</a>
+        <a href="jadwal.html">Jadwal</a> <a href="galeri.html">Galeri</a>
+        <a href="feedback.html">Feedback</a>
+      </div>
+    </div>
+    <br /><br /><br />
+    <hr />
+
+    
     <div class="foto">
         <h3 class="garis"><b>Biodata singkat</b></h3>
 
-<img class="avatar" src="image/WIN_20250917_20_14_17_Pro.jpg"width=220px align= alt=""><br>
+<img class="avatar" src="image/photo_2025-08-24_13-17-15.jpg"width=220px align= alt=""><br>
 <p><b>Assalammualaikum!,</b> halo sobat html perkenalkan saya adalah siswa/santri <b>HSI Boarding School Purworejo.</b>
 Saya sangat suka belajar teknologi dan ingin menjadi <i>pribadi yg bermanfaat bagi orang lain.</i> 
-Saat ini saya sedang    belajar <b>HTML</b> dasar untuk membuat website sendiri yg sederhana.</p>
+Saat ini saya sedang belajar <b>HTML</b> dasar untuk membuat website sendiri yg sederhana.</p>
 
 </div>
 
@@ -37,7 +51,7 @@ Saat ini saya sedang    belajar <b>HTML</b> dasar untuk membuat website sendiri 
 <ol>
     <li>Dai</li>
     <li>Qo'ri</li>
-    <li>Motivator</li></div>c:\Users\Ahmad Faiz Muharram\OneDrive\Desktop\Tugas sampingan html\Tugas Benefit\tugas 3
+    <li>Motivator</li></div>
 </ol>
 
 <div class="foto">
@@ -48,7 +62,7 @@ Saat ini saya sedang    belajar <b>HTML</b> dasar untuk membuat website sendiri 
 <p><b>Email:faiz64muharram@gmail.com</b></p>
 </div>
 
-<div><a class="tengah" href="index2.html"><b>⬅️Kembali ke halaman utama</b></a>
+<div><a class="tengah" href="index.html"><b>⬅️Kembali ke halaman utama</b></a>
 </div>
 
 
